--- a/norns-dev/Makefile
+++ b/norns-dev/Makefile
@@ -1,9 +1,9 @@
 .PHONY: build run clean
 
 build:
-	docker build -t samdoshi/norns-dev .
+	docker build -t wwinder/norns-dev .
 
 run:
 	docker run --rm -it \
 		--ulimit rtprio=95 --ulimit memlock=-1 --shm-size=256m \
-		samdoshi/norns-dev
+		wwinder/norns-dev
