Add default matronrc.lua file.

--- a/norns-test-dummy/Makefile
+++ b/norns-test-dummy/Makefile
@@ -14,8 +14,6 @@ run:
 		-p 5900:5900 \
 		-p 8889:8889 \
 		-p 10111:10111/udp \
-		-v ${PWD}/jackdrc:/etc/jackdrc \
-		-v ${PWD}/matronrc.lua:/home/we/norns/matronrc.lua \
 		--name norns-test-dummy \
 		wwinder/norns-test-dummy
 
@@ -34,7 +32,7 @@ run-audio:
 		-p 10111:10111/udp \
 		--name norns-test-dummy \
 		-v ${PWD}/matronrc.lua:/home/we/norns/matronrc.lua \
-		-v /tmp/jackdrc:/etc/jackdrc \
+		-v ${PWD}/my_jackdrc:/etc/jackdrc \
 		wwinder/norns-test-dummy
 
 run-bash:
